# serializer version: 1
# name: TestTransactionsChainBundleDownload.test_forbidden
  dict({
    'code': 'drf.permission_denied',
    'message': 'At least one verified gadget is required',
    'success': False,
  })
# ---
# name: TestTransactionsChainBundleDownload.test_throttling
  dict({
    'code': 'drf.throttled',
    'message': 'Request was throttled. Expected available in 3600 seconds.',
    'success': False,
  })
# ---
# name: TestTransactionsChainBundleDownload.test_transaction_does_not_exist
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsChainBundleDownload.test_unauthorized
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
